--- a/src/Lecture12/bookmovie.cabal
+++ b/src/Lecture12/bookmovie.cabal
@@ -11,6 +11,7 @@ library
   exposed-modules:     API
                      , API.Session
                      , API.Preliminary
+                     , API.Charge
                      , App
                      , DB.Booking
                      , DB.MovieSession
